Fixed overflow of KaTeX rendering

--- a/app/static/CSS/style.css
+++ b/app/static/CSS/style.css
@@ -215,10 +215,13 @@ nav a:hover {
   transform: translateY(-1px);
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2)
 }
+
 h2 {
+  overflow: hidden;
   text-align: center;
   color: #76ABAE;
 }
+
 h4 {
   text-align: center;
 }
@@ -410,6 +413,13 @@ input[type="submit"]:disabled {
   color: #ff8989;
   font-size: x-small;
   text-align: center;
+}
+
+.katex-display {
+  display: block !important;
+  margin: 1em 0 !important;
+  text-align: center !important;
+  overflow: overlay;
 }
 .card {
   margin: 20px auto;
